--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,25 @@
     transform: rotate(360deg);
   }
 }
+
+.meme span {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  margin-top: 50px;
+  font-size: 38px;
+  color: white;
+  text-shadow: #5b00ff 1px 0 10px;
+}
+
+.meme span:nth-child(3) {
+  margin-top: 300px;
+}
+
+.meme img {
+  width: 100%;
+}
+
+body, .meme{
+  background-color: black;
+}
